# simplaix-gateway

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  drizzle.sqlite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.cli.json  tsconfig.gateway.json
.cursor/plans/: agent_runtime_token_01218f12.plan.md  apns_push_approval_flow_2a3c05ff.plan.md  approval_correlation_fix_97edd4de.plan.md  gateway-level_auth_flow_5774486c.plan.md  gateway_auth_system_0da508fa.plan.md  gateway_gap_analysis_13daf833.plan.md  gateway_management_app_108bed5e.plan.md  jwt_issuance_separation_208db208.plan.md  mcp_federation_and_acl_77da18b5.plan.md  mcp_gateway_实现_fb32135f.plan.md  p0_api_key_auth_88c23f73.plan.md  sync_hold_approval_2e91f468.plan.md  tool_policy_approval_system_ca535789.plan copy.md  tool_policy_approval_system_ca535789.plan.md  unified_mcp_endpoint_046c48f2.plan.md  user_credential_system_42d861ec.plan.md
.cursor/rules/: coding-patterns.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docs/: next.config.mjs  package.json
docs/public/: mcp.json  (+1 more)
examples/openai-agents-gateway-python/: .env.example  README.md  agent_runtime.py  invoke_via_gateway.py  pyproject.toml
gateway-app/: .env.example  DESIGN_RULES.md  package.json
scripts/: bundle-dashboard.mjs  dev-tunnel.sh  fake-external-issuer.js  test-auth.js  test-mcp.sh
simplaix-approval-app/: app.json  metro.config.js  package.json  tailwind.config.js
src/: config.ts  index.ts  server.ts
(+249 files in other folders)
